--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <script src="https://cdn.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
         <script src="https://cdn.babylonjs.com/gui/babylon.gui.min.js"></script>
         <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+        <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js">
+            <babylon model="models/scene.glb"></babylon>
+        </script>
 
         <style>
             html, body {
