add a village deing destroyed

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
                 Assets.meshes.Elf.filename, scene, function (newMeshes) {
                     newMeshes[0].scaling = new BABYLON.Vector3(1, 1, 1);
                 });
+
+            BABYLON.SceneLoader.ImportMeshAsync(
+                "",
+                Assets.meshes.village.rootUrl,
+                Assets.meshes.village.filename, scene, function (newMeshes) {
+                    newMeshes[0].scaling = new BABYLON.Vector3(0.1, 0.1, 0.1);
+                });
             return scene;
 
 
