removed scaling from the village model

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
             BABYLON.SceneLoader.ImportMeshAsync(
                 "",
                 Assets.meshes.village.rootUrl,
-                Assets.meshes.village.filename, scene, function (newMeshes) {
-                    newMeshes[0].scaling = new BABYLON.Vector3(0.1, 0.1, 0.1);
-                });
+                Assets.meshes.village.filename);
             return scene;
 
 
