--- a/index.html
+++ b/index.html
@@ -70,28 +70,54 @@
         var createDefaultEngine = function () { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true, disableWebGL2Support: false }); };
 
         const createScene = () => {
-    
-    const scene = new BABYLON.Scene(engine);
 
-    const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 2, new BABYLON.Vector3(0, 0, 0));
-    camera.attachControl(canvas, true);
-    const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
- 
-    BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "car.babylon").then(() =>  {
-      const wheelRB = scene.getMeshByName("wheelRB");
-      const wheelRF = scene.getMeshByName("wheelRF");
-      const wheelLB = scene.getMeshByName("wheelLB");
-      const wheelLF = scene.getMeshByName("wheelLF");
-      console.log(wheelRB.animations)
-      scene.beginAnimation(wheelRB, 0, 30, true);
-      scene.beginAnimation(wheelRF, 0, 30, true);
-      scene.beginAnimation(wheelLB, 0, 30, true);
-      scene.beginAnimation(wheelLF, 0, 30, true);
-    });
+            const scene = new BABYLON.Scene(engine);
 
-    return scene;
-};
-        
+            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 2, new BABYLON.Vector3(0, 0, 0));
+            camera.attachControl(canvas, true);
+            const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
+
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "car.babylon").then(() => {
+                //car animatiion
+                const car = scene.getMeshByName("car");
+
+                const animCar = new BABYLON.Animation("carAnimation", "position.x", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
+
+                const carKeys = [];
+
+                carKeys.push({
+                    frame: 0,
+                    value: -4
+                });
+
+
+                carKeys.push({
+                    frame: 150,
+                    value: 4
+                });
+
+                animCar.setKeys(carKeys);
+
+                car.animations = [];
+                car.animations.push(animCar);
+
+                scene.beginAnimation(car, 0, 150, true);
+
+                //wheel animation
+                const wheelRB = scene.getMeshByName("wheelRB");
+                const wheelRF = scene.getMeshByName("wheelRF");
+                const wheelLB = scene.getMeshByName("wheelLB");
+                const wheelLF = scene.getMeshByName("wheelLF");
+
+                scene.beginAnimation(wheelRB, 0, 30, true);
+                scene.beginAnimation(wheelRF, 0, 30, true);
+                scene.beginAnimation(wheelLB, 0, 30, true);
+                scene.beginAnimation(wheelLF, 0, 30, true);
+            });
+
+            return scene;
+        };
+
         window.initFunction = async function () {
             var asyncEngineCreation = async function () {
                 try {
