--- a/index.html
+++ b/index.html
@@ -69,31 +69,39 @@
         var sceneToRender = null;
         var createDefaultEngine = function () { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true, disableWebGL2Support: false }); };
 
-        const createScene = () => {
+        const createScene = function () {
 
             const scene = new BABYLON.Scene(engine);
 
-            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 2, new BABYLON.Vector3(0, 0, 0));
+            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
             camera.attachControl(canvas, true);
             const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "car.babylon").then(() => {
-                //car animatiion
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "village.glb");
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "car.glb").then(() => {
                 const car = scene.getMeshByName("car");
+                car.rotation = new BABYLON.Vector3(Math.PI / 2, 0, -Math.PI / 2);
+                car.position.y = 0.20;
+                car.position.x = -3;
+                car.position.z = 8;
 
-                const animCar = new BABYLON.Animation("carAnimation", "position.x", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
+                const animCar = new BABYLON.Animation("carAnimation", "position.z", 30, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
 
                 const carKeys = [];
 
                 carKeys.push({
                     frame: 0,
-                    value: -4
+                    value: 8
                 });
-
 
                 carKeys.push({
                     frame: 150,
-                    value: 4
+                    value: -7
+                });
+
+                carKeys.push({
+                    frame: 200,
+                    value: -7
                 });
 
                 animCar.setKeys(carKeys);
@@ -101,7 +109,7 @@
                 car.animations = [];
                 car.animations.push(animCar);
 
-                scene.beginAnimation(car, 0, 150, true);
+                scene.beginAnimation(car, 0, 200, true);
 
                 //wheel animation
                 const wheelRB = scene.getMeshByName("wheelRB");
