--- a/index.html
+++ b/index.html
@@ -74,10 +74,36 @@
             const scene = new BABYLON.Scene(engine);
 
             const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
+            camera.upperBetaLimit = Math.PI / 2.2;
             camera.attachControl(canvas, true);
             const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "village.glb");
+            const spriteManagerTrees = new BABYLON.SpriteManager("treesManager", "textures/palm.png", 2000, { width: 512, height: 1024 }, scene);
+
+            for (let i = 0; i < 500; i++) {
+                const tree = new BABYLON.Sprite("tree", spriteManagerTrees);
+                tree.position.x = Math.random() * (-30);
+                tree.position.z = Math.random() * 20 + 8;
+                tree.position.y = 0.5;
+            }
+
+            for (let i = 0; i < 500; i++) {
+                const tree = new BABYLON.Sprite("tree", spriteManagerTrees);
+                tree.position.x = Math.random() * (25) + 7;
+                tree.position.z = Math.random() * -35 + 8;
+                tree.position.y = 0.5;
+            }
+
+            const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", { size: 150 }, scene);
+            const skyboxMaterial = new BABYLON.StandardMaterial("skyBox", scene);
+            skyboxMaterial.backFaceCulling = false;
+            skyboxMaterial.reflectionTexture = new BABYLON.CubeTexture("textures/skybox", scene);
+            skyboxMaterial.reflectionTexture.coordinatesMode = BABYLON.Texture.SKYBOX_MODE;
+            skyboxMaterial.diffuseColor = new BABYLON.Color3(0, 0, 0);
+            skyboxMaterial.specularColor = new BABYLON.Color3(0, 0, 0);
+            skybox.material = skyboxMaterial;
+
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "valleyvillage.glb");
             BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "car.glb").then(() => {
                 const car = scene.getMeshByName("car");
                 car.rotation = new BABYLON.Vector3(Math.PI / 2, 0, -Math.PI / 2);
@@ -124,15 +150,6 @@
                 scene.beginAnimation(wheelLF, 0, 30, true);
             });
 
-            BABYLON.SceneLoader.ImportMeshAsync("", "/scenes/Dude/", "Dude.babylon", scene).then((result) => {
-                var dude = result.meshes[0];
-                dude.scaling = new BABYLON.Vector3(0.02, 0.02, 0.02);
-                dude.position.y = 0;
-                dude.position.x = -1;
-                dude.position.z = -3;
-
-                scene.beginAnimation(result.skeletons[0], 0, 100, true, 1.0);
-            });
 
             return scene;
         };
