--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>School chalein hum...</title>
+    <title>Macondo</title>
 
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
     <!-- Babylon.js -->
