--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 scene.beginAnimation(wheelLF, 0, 30, true);
             });
 
-            BABYLON.SceneLoader.ImportMeshAsync("", "/scenes/Dude/", "Dude.babylon", scene).then((result) => {
+            BABYLON.SceneLoader.ImportMeshAsync("dude", "/scenes/Dude/", "Dude.babylon", scene).then((result) => {
                 var dude = result.meshes[0];
                 dude.scaling = new BABYLON.Vector3(0.02, 0.02, 0.02);
                 dude.position.y = 0;
