--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
 			
         })
     });
+
+	       BABYLON.SceneLoader.ImportMeshAsync("", "https://assets.babylonjs.com/meshes/", "lamp.babylon").then(() =>{
+        const lampLight = new BABYLON.SpotLight("lampLight", BABYLON.Vector3.Zero(), new BABYLON.Vector3(0, -1, 0), 0.8 * Math.PI, 0.01, scene);
+        lampLight.diffuse = BABYLON.Color3.Yellow();
+        lampLight.parent = scene.getMeshByName("bulb")
+
+        const lamp = scene.getMeshByName("lamp");
+        lamp.position = new BABYLON.Vector3(2, 0, 2); 
+        lamp.rotation = BABYLON.Vector3.Zero();
+        lamp.rotation.y = -Math.PI / 4;
+
+        lamp3 = lamp.clone("lamp3");
+        lamp3.position.z = -8;
+
+        lamp1 = lamp.clone("lamp1");
+        lamp1.position.x = -8;
+        lamp1.position.z = 1.2;
+        lamp1.rotation.y = Math.PI / 2;
+
+        lamp2 = lamp1.clone("lamp2");
+        lamp2.position.x = -2.7;
+        lamp2.position.z = 0.8;
+        lamp2.rotation.y = -Math.PI / 2;
+
+    });
     
     //Skybox
     const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", {size:150}, scene);
