--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
 
             });
 
+            const panel = new BABYLON.GUI.StackPanel();
+    panel.width = "220px";
+    panel.top = "-25px";
+    panel.horizontalAlignment = BABYLON.GUI.Control.HORIZONTAL_ALIGNMENT_RIGHT;
+    panel.verticalAlignment = BABYLON.GUI.Control.VERTICAL_ALIGNMENT_BOTTOM;
+    adt.addControl(panel);
+
+    const header = new BABYLON.GUI.TextBlock();
+    header.text = "Night to Day";
+    header.height = "30px";
+    header.color = "white";
+    panel.addControl(header); 
+
             //Skybox
             const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", { size: 150 }, scene);
             const skyboxMaterial = new BABYLON.StandardMaterial("skyBox", scene);
