--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             const light = new BABYLON.DirectionalLight("dir01", new BABYLON.Vector3(0, -1, 1), scene);
             light.position = new BABYLON.Vector3(0, 50, -100);
 
+            const adt = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
+
             // Shadow generator
             const shadowGenerator = new BABYLON.ShadowGenerator(1024, light);
 
@@ -173,21 +175,7 @@
             header.color = "white";
             panel.addControl(header);
 
-            const slider = new BABYLON.GUI.Slider();
-            slider.minimum = 0;
-            slider.maximum = 1;
-            slider.borderColor = "black";
-            slider.color = "gray";
-            slider.background = "white";
-            slider.value = 1;
-            slider.height = "20px";
-            slider.width = "200px";
-            slider.onValueChangedObservable.add((value) => {
-                if (light) {
-                    light.intensity = value;
-                }
-            });
-            panel.addControl(slider);
+
 
             //Skybox
             const skybox = BABYLON.MeshBuilder.CreateBox("skyBox", { size: 150 }, scene);
